[package]
name = "h2-cookie-violation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
env_logger = "0.10.0"
h2 = "0.3.20"
http = "0.2.9"
tokio = { version = "1.29.1", features = ["full"] }
